@@ -1,13 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.581 2006/01/22 23:42:29 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.582 2006/01/23 00:56:58 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
   22 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/SimpleXMLParser.py:
   initial support for 'include' in XML files
+  src/GLIStorageDevice.py:
+  initial support for %
 
   15 Jan 2006; Preston Cody <codeman@gentoo.org>
   webgli/configfiles:
